--- a/src/components/Sections/HomePage/WhyChooseMe/WhyChooseMe.module.scss
+++ b/src/components/Sections/HomePage/WhyChooseMe/WhyChooseMe.module.scss
@@ -23,6 +23,10 @@
       h3 {
         font-weight: settings.$font-weight-bold;
       }
+
+      & > a {
+        margin: 0 auto;
+      }
     }
 
     .second_column {
