--- a/src/components/Sections/LandingPages/LPAction/LPAction.module.scss
+++ b/src/components/Sections/LandingPages/LPAction/LPAction.module.scss
@@ -4,6 +4,10 @@
   background-color: settings.$color-background-dark;
   padding: 80px 0;
   position: relative;
+  background-image: url('/images/baner-01.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 
   .wrapper {
     display: flex;
@@ -26,5 +30,15 @@
       color: settings.$color-text-light;
       margin-bottom: 50px;
     }
+
+    & > a {
+      margin: 0 auto;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .LPAction {
+    background-image: url('/images/baner_mobile.webp');
   }
 }
