--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -60,9 +60,13 @@
         flex-direction: column;
         align-items: center;
 
-        svg {
-          font-size: 1.8rem;
-          margin: 10px;
+        .social_media {
+          display: flex;
+
+          svg {
+            font-size: 1.8rem;
+            margin: 10px;
+          }
         }
 
         span {
