--- a/src/components/Header/Headers/Headers.module.scss
+++ b/src/components/Header/Headers/Headers.module.scss
@@ -4,7 +4,7 @@
   background-color: settings.$color-background-dark;
   position: relative;
   height: 700px;
-  background-image: image-set(url('/images/tlo.avif') type('image/avif'), url('/images/tlo.webp') type('image/webp'));
+  background-image: url('/images/hero_2.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -78,6 +78,9 @@
 
 @media (max-width: 1000px) {
   .header {
+    background-image: url('/images/hero_2_mobile.webp');
+    background-position: top 25% center;
+
     .content {
       .title {
         font-size: 2.5rem;
@@ -92,11 +95,6 @@
 
 @media (max-width: 880px) {
   .header {
-    background-image: image-set(
-      url('/images/tlo-mobile.avif') type('image/avif'),
-      url('/images/tlo-mobile.webp') type('image/webp')
-    );
-
     height: 600px;
     .content {
       .title {
