--- a/src/components/Sections/Blog/ArticleList/ArticleList.module.scss
+++ b/src/components/Sections/Blog/ArticleList/ArticleList.module.scss
@@ -1,11 +1,12 @@
 .article_list {
-  min-height: 700px;
+  padding: 100px 0;
 
   .wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     flex-direction: row;
+    gap: 20px;
   }
 }
 
