--- a/src/components/Sections/HomePage/RescentArticles/RescentArticles.module.scss
+++ b/src/components/Sections/HomePage/RescentArticles/RescentArticles.module.scss
@@ -13,6 +13,11 @@
     margin-bottom: 50px;
     gap: 20px;
   }
+
+  .button_box {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 @media (max-width: 992px) {
