--- a/src/components/Sections/LandingPages/LPPortfolio/LPPortfolio.module.scss
+++ b/src/components/Sections/LandingPages/LPPortfolio/LPPortfolio.module.scss
@@ -1,14 +1,13 @@
 @use '../../../../styles/settings.scss' as settings;
 
 .portfolio {
-  padding: 150px 0 250px;
-  background-color: settings.$color-background-lighter;
+  padding: 150px 0;
 
   .wrapper {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding-bottom: 100px;
+    gap: 50px;
 
     .portfolio_item {
       flex: calc(50% - 100px);
@@ -16,10 +15,9 @@
 
       .overlay {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         background-color: rgba(0, 0, 0, 0.5);
         backdrop-filter: blur(5px);
         -webkit-backdrop-filter: blur(5px);
@@ -28,16 +26,34 @@
         align-items: center;
         opacity: 0;
         transition: settings.$transition_0_3;
-        color: settings.$color-text-light;
         text-align: center;
+        padding: 20px 30px;
+        border-radius: 20px;
 
         h3 {
-          font-size: 2rem;
+          font-size: 1.6rem;
           font-weight: settings.$font-weight-extrabold;
           margin-bottom: 1rem;
+          color: settings.$color-text-primary;
         }
 
-        &:hover {
+        p {
+          margin-bottom: 1rem;
+          color: settings.$color-text-light;
+        }
+
+        .button {
+          color: settings.$color-text-light;
+          text-transform: uppercase;
+
+          &:hover {
+            color: settings.$color-primary;
+          }
+        }
+      }
+
+      &:hover {
+        .overlay {
           opacity: 1;
         }
       }
@@ -46,24 +62,6 @@
     .title_box {
       margin: 25px 25px;
       text-align: center;
-    }
-
-    .image_box {
-      margin: 25px 25px;
-      border-radius: 20px;
-      transition: settings.$transition_0_3;
-      border: solid 10px settings.$color-background-dark;
-      overflow: hidden;
-
-      img {
-        object-fit: cover;
-        object-position: top;
-      }
-
-      &:hover {
-        transform: scale(1.05);
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-      }
     }
   }
 }
@@ -80,7 +78,7 @@
 
 @media (max-width: 768px) {
   .portfolio {
-    padding: 100px 0 250px;
+    padding: 100px 0;
 
     .wrapper {
       flex-direction: column;
