--- a/src/components/Sections/Shared/ArticleCard/ArticleCard.module.scss
+++ b/src/components/Sections/Shared/ArticleCard/ArticleCard.module.scss
@@ -23,8 +23,11 @@
       margin: 0 0 20px;
     }
 
-    button {
-      margin-top: auto;
+    & > a {
+      text-decoration: none;
+      margin: auto auto 0;
+      color: settings.$color-text-secondary;
+      text-transform: uppercase;
 
       &:hover {
         color: settings.$color-text-primary;
