--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -62,10 +62,12 @@
 
         .social_media {
           display: flex;
+          gap: 20px;
+          margin-top: 20px;
 
           svg {
-            font-size: 1.8rem;
-            margin: 10px;
+            width: 30px;
+            height: 30px;
           }
         }
 
