--- a/src/components/Sections/Contact/ContactInfo/ContactInfo.module.scss
+++ b/src/components/Sections/Contact/ContactInfo/ContactInfo.module.scss
@@ -22,7 +22,8 @@
         justify-content: center;
 
         svg {
-          font-size: 45px;
+          width: 50px;
+          height: 50px;
           margin-bottom: 30px;
         }
       }
