--- a/src/components/Sections/Form/MultiStepForm/MultiStepForm.module.scss
+++ b/src/components/Sections/Form/MultiStepForm/MultiStepForm.module.scss
@@ -3,19 +3,50 @@
 .order_site_form {
   margin: 150px 0 300px;
   background-color: settings.$color-background-dark;
-  padding: 100px 0;
+  padding: 200px 100px;
+  position: relative;
 
   .form {
     max-width: 728px;
     margin: 0 auto;
     padding: 0 20px;
+    display: flex;
+    flex-direction: column;
 
     .form_group {
+      display: flex;
+      flex-direction: column;
       margin-bottom: 20px;
 
+      & > label {
+        display: flex;
+        align-items: center;
+
+        & > input {
+          margin-right: 10px;
+          width: 20px;
+          height: 20px;
+          border-radius: 5px;
+
+          &:checked {
+            accent-color: settings.$color-background-primary !important;
+          }
+        }
+
+        & > span {
+          font-size: 1rem;
+        }
+      }
+
+      p {
+        font-size: 0.9rem;
+        margin-bottom: 10px;
+        color: settings.$color-text-light;
+      }
+
       label {
-        font-size: 0.8rem;
-        margin-bottom: 1px;
+        font-size: 0.9rem;
+        margin-bottom: 10px;
         color: settings.$color-text-light;
       }
 
@@ -24,6 +55,36 @@
         border-radius: 5px;
         background-color: settings.$color-background-light !important;
       }
+
+      select {
+        padding: 10px;
+        border-radius: 5px;
+        background-color: settings.$color-background-light !important;
+      }
+    }
+
+    .success {
+      background-color: settings.$color-background-light;
+      padding: 20px;
+      border-radius: 5px;
+      margin: 20px 0;
+      color: settings.$color-text-success;
+    }
+
+    .error {
+      background-color: settings.$color-background-light;
+      padding: 20px;
+      border-radius: 5px;
+      margin: 20px 0;
+      color: settings.$color-text-danger;
+    }
+
+    .pending {
+      background-color: settings.$color-background-light;
+      padding: 20px;
+      border-radius: 5px;
+      margin: 20px 0;
+      color: settings.$color-text-dark;
     }
 
     .button_wrapper {
