--- a/src/components/Sections/LandingPages/MainPageInfo/MainPageInfo.module.scss
+++ b/src/components/Sections/LandingPages/MainPageInfo/MainPageInfo.module.scss
@@ -4,5 +4,25 @@
   margin: 200px 0 100px;
   .wrapper {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+
+      h3 {
+        font-size: 1.5rem;
+        font-weight: 700;
+
+        &:hover {
+          color: settings.$color-primary;
+        }
+      }
+    }
   }
 }
