--- a/src/components/Sections/Shared/ServiceHighlights/ServiceHighlights.module.scss
+++ b/src/components/Sections/Shared/ServiceHighlights/ServiceHighlights.module.scss
@@ -19,9 +19,11 @@
       flex-direction: column;
       justify-content: space-evenly;
       align-items: flex-start;
+      gap: 20px;
 
       h3 {
         font-weight: settings.$font-weight-bold;
+        font-size: 1.8rem;
       }
 
       & > a {
@@ -43,6 +45,11 @@
 
       .second_card {
         text-align: right;
+      }
+
+      .card h3 {
+        font-weight: settings.$font-weight-bold;
+        font-size: 1.3rem;
       }
     }
 
@@ -73,6 +80,10 @@
 
       .first_column {
         border-radius: 20px 20px 0 0;
+
+        h3 {
+          font-size: 1.5rem;
+        }
       }
 
       .second_column {
@@ -95,11 +106,11 @@
     .wrapper {
       .first_column {
         h3 {
-          font-size: 1.5rem;
+          font-size: 1.3rem;
         }
 
         h4 {
-          font-size: 1.2rem;
+          font-size: 1.1rem;
         }
 
         p {
