--- a/src/components/Header/Headers/HeaderHome.module.scss
+++ b/src/components/Header/Headers/HeaderHome.module.scss
@@ -85,6 +85,7 @@
 @media (max-width: 1000px) {
   .header {
     background-image: url('/images/hero_2_mobile.webp');
+    background-position: top 25% center;
 
     .logo {
       display: none;
