--- a/src/components/Sections/HomePage/MyServiceComponents/MyServices/MyServices.module.scss
+++ b/src/components/Sections/HomePage/MyServiceComponents/MyServices/MyServices.module.scss
@@ -22,9 +22,9 @@
       background-color: settings.$color-primary;
     }
 
-    .icon {
-      width: 70px;
-      height: 70px;
+    svg {
+      width: 50px;
+      height: 50px;
       color: settings.$color-primary;
       margin-right: 2rem;
     }
