--- a/src/components/Sections/LandingPages/LPMyServicesAccordion/LPMyServicesAccordion.module.scss
+++ b/src/components/Sections/LandingPages/LPMyServicesAccordion/LPMyServicesAccordion.module.scss
@@ -76,6 +76,8 @@
 
       .tab_content_left {
         flex: 100%;
+        display: flex;
+        flex-direction: column;
 
         h3 {
           font-size: 2rem;
@@ -94,7 +96,7 @@
           }
         }
 
-        .button {
+        a {
           margin: 0 auto;
         }
       }
