--- a/src/components/Sections/LandingPages/LPSiteInfo/LPSiteInfo.module.scss
+++ b/src/components/Sections/LandingPages/LPSiteInfo/LPSiteInfo.module.scss
@@ -3,7 +3,7 @@
 .site_info {
   .wrapper {
     display: flex;
-    margin-top: -80px;
+    margin-top: -110px;
     margin-bottom: 0;
     z-index: 1;
     position: relative;
@@ -17,11 +17,13 @@
       border-radius: 20px 0 0 20px;
       display: flex;
       flex-direction: column;
-      justify-content: space-evenly;
+      justify-content: space-around;
       align-items: flex-start;
+      gap: 20px;
 
       h3 {
         font-weight: settings.$font-weight-bold;
+        font-size: 1.8rem;
       }
 
       & > a {
@@ -31,11 +33,22 @@
 
     .second_column {
       flex: 1;
-      padding: 1.5rem;
+      padding: 2rem;
       background-color: settings.$color-background-lighter;
       border-radius: 0 20px 20px 0;
       display: flex;
       flex-direction: column;
+
+      .card {
+        background-color: settings.$color-background-light;
+        border-radius: 20px;
+        padding: 1rem;
+
+        h3 {
+          font-weight: settings.$font-weight-bold;
+          font-size: 1.3rem;
+        }
+      }
 
       .first_card {
         text-align: left;
@@ -50,7 +63,6 @@
           text-decoration: none;
           transition: color 0.3s;
           text-transform: uppercase;
-          // text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.659);
           letter-spacing: 2px;
 
           &:hover {
@@ -58,12 +70,6 @@
           }
         }
       }
-    }
-
-    .card {
-      background-color: settings.$color-background-light;
-      border-radius: 20px;
-      padding: 1rem;
     }
   }
 
@@ -74,6 +80,20 @@
     border-radius: 20px;
     display: flex;
     box-shadow: settings.$box-shadow;
+
+    p {
+      font-size: 1.5rem;
+      font-weight: settings.$font-weight-bold;
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 1920px) {
+  .site_info {
+    .wrapper {
+      margin-top: -100px;
+    }
   }
 }
 
@@ -84,6 +104,10 @@
 
       .first_column {
         border-radius: 20px 20px 0 0;
+
+        h3 {
+          font-size: 1.5rem;
+        }
       }
 
       .second_column {
@@ -98,11 +122,11 @@
     .wrapper {
       .first_column {
         h3 {
-          font-size: 1.5rem;
+          font-size: 1.3rem;
         }
 
         h4 {
-          font-size: 1.2rem;
+          font-size: 1.1rem;
         }
 
         p {
@@ -112,8 +136,11 @@
     }
 
     .banner {
-      font-size: 0.5rem;
       text-align: center;
+
+      p {
+        font-size: 1.1rem;
+      }
     }
   }
 }
