--- a/src/components/Sections/Logo/LogoCreateProcessSteps/LogoProcessSteps.module.scss
+++ b/src/components/Sections/Logo/LogoCreateProcessSteps/LogoProcessSteps.module.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     margin: auto;
+    max-width: 1200px;
 
     .step {
       margin: 50px 50px;
