Poprawa wydajności - dodanie lazyLoad do komponentów odpowiadających za wygląd oraz przełączanie komponentów dla mobile i desktop

--- a/src/components/Sections/Contact/Contact/Contact.scss
+++ b/src/components/Sections/Contact/Contact/Contact.scss
@@ -1,7 +1,11 @@
 @use '../../../../styles/settings.scss' as settings;
 
-.contact {
-  @media (max-width: 768px) {
-    margin: 200px 0 100px 0;
+@media (max-width: 768px) {
+  .contact {
+    padding: 10px 0px;
+
+    .form_wrapper {
+      padding: 30px 20px;
+    }
   }
 }
