--- a/src/components/Sections/HomePage/WebSiteProcessSteps/WebSiteProcessSteps.scss
+++ b/src/components/Sections/HomePage/WebSiteProcessSteps/WebSiteProcessSteps.scss
@@ -142,10 +142,7 @@
       }
     }
 
-    .active {
-      transform: scale(1.1);
-      transition: settings.$transition_0_3;
-
+    .active_proces {
       .step_brief {
         border-bottom: 5px solid #002dae;
         border-radius: 20px;
