--- a/src/components/Sections/Form/MultiStepForm/MultiStepForm.scss
+++ b/src/components/Sections/Form/MultiStepForm/MultiStepForm.scss
@@ -43,3 +43,15 @@
     }
   }
 }
+
+@media (max-width: 998px) {
+  .order_site_form {
+    padding: 150px 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .order_site_form {
+    padding: 150px 0px;
+  }
+}
