--- a/src/components/Sections/Logo/LogoCreateProcessSteps/LogoProcessSteps.scss
+++ b/src/components/Sections/Logo/LogoCreateProcessSteps/LogoProcessSteps.scss
@@ -65,10 +65,7 @@
       }
     }
 
-    .active {
-      transform: scale(1.1);
-      transition: settings.$transition_0_3;
-
+    .active_logo_process_steps {
       .step_brief {
         border-bottom: 5px solid #002dae;
         border-radius: 20px;
