--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -48,6 +48,7 @@
 $color-primary: #ffbf00;
 // $color-secondary: #191d28;
 $color-secondary: #191919;
+$color-secondary-light: #191d28;
 
 $color-text-dark: #141414;
 $color-text-dark-light: #1b1b1b;
