--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,10 @@
   box-shadow: none !important;
 }
 
+.tl-edges {
+  overflow-x: unset;
+}
+
 html {
   font-size: 16px;
   overflow-x: hidden !important;
