--- a/src/components/Header/Menu/Menu.scss
+++ b/src/components/Header/Menu/Menu.scss
@@ -4,4 +4,26 @@
   background: rgba(25, 29, 41, 0.65);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+  transition: background-color 1s ease, backdrop-filter 0.4s ease, -webkit-backdrop-filter 0.4s ease;
+}
+
+.menu_wrapper_bottom {
+  margin-top: 10px;
+  background: rgba(settings.$color-background-dark, 0.8);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 15px;
+}
+
+.navbar.scrolled .menu_wrapper_bottom {
+  background: rgba(settings.$color-background-dark, 0) !important;
+  backdrop-filter: none;
+  -webkit-backdrop-filter: none;
+}
+
+@supports not ((backdrop-filter: blur(1px)) or (-webkit-backdrop-filter: blur(1px))) {
+  .navbar.scrolled {
+    /* bez blur – trochę mocniej przyciemnij kolor */
+    background-color: rgba(25, 29, 41, 0.85);
+  }
 }
