--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -59,6 +59,8 @@ $color-text-success: #00ff00;
 $color-text-primary: $color-primary;
 $color-text-secondary: $color-secondary;
 
+$color-border-light: #e5e7eb;
+
 $color-background-light: #ffffff;
 $color-background-lighter: #f7f7f7;
 $color-background-dark: $color-secondary;
