--- a/src/components/Header/Headers/HeaderHome.scss
+++ b/src/components/Header/Headers/HeaderHome.scss
@@ -59,6 +59,18 @@
   }
 }
 
+@media (max-width: 1200px) {
+  .header {
+    .title {
+      font-size: 3.5rem;
+    }
+
+    .subtitle {
+      font-size: 1.25rem;
+    }
+  }
+}
+
 @media (max-width: 880px) {
   .header {
     height: 600px;
@@ -68,11 +80,15 @@
     }
 
     .title {
-      font-size: 2rem;
+      font-size: 2.5rem;
     }
 
     .subtitle {
       font-size: 1rem;
+    }
+
+    .content h1 .line {
+      height: 5px;
     }
   }
 }
