--- a/src/components/Ui/CustomButton/CustomButton.scss
+++ b/src/components/Ui/CustomButton/CustomButton.scss
@@ -21,8 +21,9 @@
   color: settings.$color-text-dark;
 
   &:hover {
-    background-color: settings.$color-background-dark;
-    color: settings.$color-text-primary;
+    background-color: settings.$color-background-primary;
+    border: 1px solid settings.$color-text-primary;
+    color: settings.$color-text-dark;
   }
 }
 
