--- a/src/components/Header/Headers/HeaderHome.scss
+++ b/src/components/Header/Headers/HeaderHome.scss
@@ -1,6 +1,8 @@
 @use '../../../styles/settings.scss' as settings;
 
 .header {
+  min-height: 90vh;
+
   &::before {
     content: '';
     position: absolute;
@@ -22,15 +24,17 @@
     }
   }
 
-  .content h1 .line {
-    margin-top: 10px;
-    height: 8px;
-    border-radius: 25px;
-    background: linear-gradient(104.74deg, settings.$color-text-primary, darken(settings.$color-text-primary, 15%));
-    -webkit-text-stroke: 0.6px rgba(0, 0, 0, 0.35);
-    max-width: 750px;
-    /* Delikatny cień „na zewnątrz” kształtu liter */
-    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.25));
+  .content h1 {
+    .line {
+      margin-top: 10px;
+      height: 8px;
+      border-radius: 25px;
+      background: linear-gradient(104.74deg, settings.$color-text-primary, darken(settings.$color-text-primary, 15%));
+      -webkit-text-stroke: 0.6px rgba(0, 0, 0, 0.35);
+      max-width: 750px;
+      /* Delikatny cień „na zewnątrz” kształtu liter */
+      filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.25));
+    }
   }
 
   /* gradientowe napisy */
@@ -41,9 +45,11 @@
     color: transparent;
     /* Cienki obrys, nie ściemnia wypełnienia */
     -webkit-text-stroke: 0.6px rgba(0, 0, 0, 0.35);
-
+    text-transform: uppercase;
     /* Delikatny cień „na zewnątrz” kształtu liter */
-    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.25));
+    /* cień z przezroczystością sterowaną zmienną */
+    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, var(--shadow-opacity, 0)));
+    transition: filter 0.4s ease;
   }
 
   .title-light {
@@ -51,11 +57,26 @@
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
+    text-transform: uppercase;
     /* Cienki obrys, nie ściemnia wypełnienia */
     -webkit-text-stroke: 0.6px rgba(0, 0, 0, 0.35);
 
     /* Delikatny cień „na zewnątrz” kształtu liter */
-    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.25));
+    /* cień z przezroczystością sterowaną zmienną */
+    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, var(--shadow-opacity, 0)));
+    transition: filter 0.4s ease;
+  }
+}
+
+@media (max-width: 1600px) {
+  .header {
+    .title {
+      font-size: 3rem;
+    }
+
+    .subtitle {
+      font-size: 1.2rem;
+    }
   }
 }
 
@@ -66,21 +87,21 @@
     }
 
     .subtitle {
-      font-size: 1.25rem;
+      font-size: 1.1rem;
     }
   }
 }
 
 @media (max-width: 880px) {
   .header {
-    height: 600px;
+    min-height: 650px;
 
     &::before {
       display: none;
     }
 
     .title {
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
 
     .subtitle {
@@ -96,5 +117,6 @@
 @media (max-width: 650px) {
   .title {
     line-height: 1.1;
+    font-size: 1.5rem;
   }
 }
