--- a/src/components/Sections/Shared/ServicesInfo/ServicesInfo.scss
+++ b/src/components/Sections/Shared/ServicesInfo/ServicesInfo.scss
@@ -36,7 +36,17 @@
       gap: 30px;
 
       .card {
-        max-width: 250px;
+        max-width: unset;
+        text-align: center;
+
+        img {
+          max-height: 250px;
+        }
+
+        .card_text {
+          padding-left: 0;
+          padding-right: 0;
+        }
       }
 
       .down,
