--- a/src/components/Ui/SectionTitle/SectionTitle.scss
+++ b/src/components/Ui/SectionTitle/SectionTitle.scss
@@ -43,7 +43,7 @@
     margin-bottom: 1rem;
     position: relative;
     z-index: 1;
-    text-shadow: settings.$text-shadow;
+    // text-shadow: settings.$text-shadow;
   }
 
   .color_primary {
