--- a/src/components/Sections/Shared/ProcessTimeline/ProcessTimeline.scss
+++ b/src/components/Sections/Shared/ProcessTimeline/ProcessTimeline.scss
@@ -9,29 +9,13 @@
   }
 
   .vertical-timeline-element {
-    &:nth-of-type(1) {
-      .vertical-timeline-element-content {
-        box-shadow: 0 3px 0 #232129;
-      }
+    .vertical-timeline-element-content {
+      box-shadow: 0 3px 0 #232129;
     }
-    &:nth-of-type(2) {
+
+    &:last-of-type {
       .vertical-timeline-element-content {
-        box-shadow: 0 3px 0 #ffbf00;
-      }
-    }
-    &:nth-of-type(3) {
-      .vertical-timeline-element-content {
-        box-shadow: 0 3px 0 #0af;
-      }
-    }
-    &:nth-of-type(4) {
-      .vertical-timeline-element-content {
-        box-shadow: 0 3px 0 #2ecc71;
-      }
-    }
-    &:nth-of-type(5) {
-      .vertical-timeline-element-content {
-        box-shadow: 0 3px 0 #e74c3c;
+        box-shadow: none;
       }
     }
   }
