--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -124,6 +124,18 @@ em {
   html {
     font-size: 15px;
 
+    p {
+      line-height: 24px !important;
+    }
+
+    h2 {
+      line-height: 34px !important;
+    }
+
+    h3 {
+      line-height: 24px !important;
+    }
+
     textarea {
       font-size: 16px !important;
     }
