--- a/src/components/Sections/HomePage/MyServiceComponents/MyServicesAccordion/MyServicesAccordion.scss
+++ b/src/components/Sections/HomePage/MyServiceComponents/MyServicesAccordion/MyServicesAccordion.scss
@@ -33,6 +33,7 @@
 
 .accordion_title {
   color: settings.$color-primary;
+  line-height: 1.3;
 }
 
 .accordion_paragraph {
@@ -40,5 +41,11 @@
 
   &:last-of-type {
     margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 992px) {
+  .accordion_title {
+    line-height: 1.2 !important;
   }
 }
