--- a/src/components/Sections/HomePage/MyServiceComponents/MyServicesThumbs/MyServicesThumbs.scss
+++ b/src/components/Sections/HomePage/MyServiceComponents/MyServicesThumbs/MyServicesThumbs.scss
@@ -44,6 +44,7 @@
 .tab_content_h3 {
   color: settings.$color-primary;
   margin-bottom: 50px;
+  line-height: 1.3;
 }
 
 .tab_content {
@@ -55,5 +56,11 @@
 @media (max-width: 1400px) {
   .tab_content {
     flex-direction: column-reverse;
+  }
+}
+
+@media (max-width: 992px) {
+  .tab_content_h3 {
+    line-height: 1.2 !important;
   }
 }
